--- a/styles.css
+++ b/styles.css
@@ -89,36 +89,46 @@ button:disabled {
 
 @media screen and (max-width: 992px) {
     body {
-        padding: 5px;
+        padding: 10px;
     }
 
     h1 {
-        font-size: 4em;
+        font-size: 8rem;
     }
 
     #description, #feedback, #amount, #list, #message, label {
-        font-size: 2em;
+        font-size: 4rem;
     }
 
     #main {
         margin: 0;
         width: 100%;
+        border: 8px solid black;
+        border-radius: 20px;
     }
 
     .input-div {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: space-between;
         margin-top: 5px;
     }
 
     input {
-        margin-right: 5px;
-        height: 2em;
-        font-size: 2em;
+        box-sizing: border-box;
+        margin: 0 0 .25em 0;
+        width: 100%;
+        height: 8rem;
+        font-size: 4em;
+        border: 6px solid black;
+        border-radius: 20px;
     }
 
     button {
-        margin-left: 5px;
-        height: 2em;
+        width: 100%;
+        height: 8rem;
+        font-size: 4rem;
+        border: 6px solid black;
+        border-radius: 20px;
     }
 }
